Fix storage and storage-related test issues